# actix-web-cute-codegen

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  route.rs
src/scope/: attr.rs  derive.rs  mod.rs
tests/: test_derive_scope.rs  test_route.rs  test_scope.rs
